@@ -1,3 +1,7 @@
+2017-07-27  Carl Hetherington  <cth@carlh.net>
+
+	* Add option to specify a list of servers in the CLI version (#1104).
+
 2017-07-26  Carl Hetherington  <cth@carlh.net>
 
 	* Multi-threaded decode of DCP when previewing.
